[package]
name = "detached-jws"
version = "0.1.1"
authors = ["Irek Nigmatullin <nigma143@mail.ru>"]
description = "Detached JSON Web Signature for Rust"
documentation = "http://docs.rs/detached-jws/"
repository = "http://github.com/nigma143/rust-detached-jws"
readme = "README.md"
keywords = ["detached", "JWS", "JSON", "web", "detached-payload"]
license  = "BSD-2-Clause"
edition = "2018"

[dependencies]
serde_json = "1.0.61"
anyhow = "1.0.38"
base64 = "0.13.0"
openssl = "0.10.32"

[[bench]]
name = "benchmarks"
harness = false

[dev-dependencies]
lazy_static = "1.4.0"
criterion = "0.3.4"

[dev-dependencies.rand]
version = "0.8.3"
features = ["small_rng"]